--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,41 +11,32 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
     <script src="models/face-api.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="img/MP-favicon.png"/>
-   <script>
-     window.addEventListener('load', (event) => {
+    <script>
+      window.addEventListener('load', (event) => {
 
-     });
-
-     document.addEventListener('readystatechange', (event) => {
-     });
-
-     document.addEventListener('DOMContentLoaded', (event) => {
       });
-   </script>
-     </head>
-<body>
+
+      document.addEventListener('readystatechange', (event) => {
+      });
+
+      document.addEventListener('DOMContentLoaded', (event) => {
+      });
+    </script>
+</head>
+<body onload="choiceFunction(); choiceKampus();">
 <header class="headerC">
     <img src="img/MP-logo.png" class="img">
+    <h1 class="kampus" id="kampus"> Kampus</h1>
     <div class="dropdown">
-
-        <h1 class="kampus"> Kampus</h1>
-        <div class="dropdown-content">
-            <div class="list">
-            <h1 class="choice" >Leiritie</h1>
-
-            <h1 class="choice" >Hämeentie</h1>
-
-            <h1 class="choice" >Myllypuro</h1>
-
-            <h1 class="choice" >Vanha viertotie</h1>
-            <h1 class="choice" >Myllypuro</h1>
-
-            <h1 class="choice" >Vanha viertotie</h1>
-            </div>
+        <div class="list" id="kampuslista" style="display: none">
+            <h1 class="choice" id="choice1">Leiritie</h1>
+            <h1 class="choice" id="choice2">Hämeentie</h1>
+            <h1 class="choice" id="choice3">Myllypuro</h1>
+            <h1 class="choice" id="choice4">Vanha viertotie</h1>
+            <h1 class="choice" id="choice5">Myllypuro</h1>
+            <h1 class="choice" id="choice6">Vanha viertotie</h1>
         </div>
     </div>
-
-
 
 
 </header>
@@ -54,11 +46,13 @@
         RUOKALAN JONO
     </h2>
     <div class="ruokalanjono">
-<div >  <canvas id="canvas" >  </canvas>
-        <video class="video" id="video" width="720" height="560" autoplay muted loop src="img/testivideo.mp4">
-           </video>
+        <div>
+            <canvas width="720" height="560" id="canvas" class="canvas"></canvas>
+            <video class="video" id="video" width="720" height="560" autoplay muted loop src="img/testivideo.mp4">
+            </video>
 
-</div>    </div>
+        </div>
+    </div>
 </div>
 <div class="rightDiv">
     <h2 class="otsikko">
@@ -66,7 +60,7 @@
         RUOKALISTA
     </h2>
     <div class="ruokalista">
-        <div class="moi" id="moi">
+        <div class="moi" id="ruokaLista">
         </div>
     </div>
 </div>
@@ -78,51 +72,69 @@
     faceapi.nets.tinyFaceDetector.loadFromUri('./models'),
     faceapi.nets.faceLandmark68Net.loadFromUri('./models'),
     faceapi.nets.faceRecognitionNet.loadFromUri('./models'),
-    faceapi.nets.faceExpressionNet.loadFromUri('./models')
-  ])
+    faceapi.nets.faceExpressionNet.loadFromUri('./models'),
+  ]);
 
   loadAndPredict();
-
-
 
   const img = document.getElementById('video');
   const video = document.getElementById('video');
 
   async function loadAndPredict() {
 
-
     const net = await bodyPix.load({
       architecture: 'MobileNetV1',
       outputStride: 16,
       multiplier: 0.75,
-      quantBytes: 2
+      quantBytes: 2,
 
     });
     setInterval(async () => {
-    const partSegmentation = await net.segmentPersonParts(img);
+      const partSegmentation = await net.segmentPersonParts(img);
 
 // The colored part image is an rgb image with a corresponding color from the
 // rainbow colors for each part at each pixel, and white pixels where there is
 // no part.
-    const coloredPartImage = bodyPix.toColoredPartMask(partSegmentation);
-    const opacity = 0.7;
-    const flipHorizontal = false;
-    const maskBlurAmount = 0;
-    const pixelCellWidth = 10.0;
+      const coloredPartImage = bodyPix.toColoredPartMask(partSegmentation);
+      const opacity = 0.7;
+      const flipHorizontal = false;
+      const maskBlurAmount = 0;
+      const pixelCellWidth = 10.0;
 
-    const canvas = document.getElementById('canvas');
+      const canvas = document.getElementById('canvas');
 
+      const displaySize = {width: video.width, height: video.height};
+      faceapi.matchDimensions(canvas, displaySize);
 
-    const displaySize = { width: video.width, height: video.height }
-    faceapi.matchDimensions(canvas, displaySize)
-
-      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height)
+      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
       bodyPix.drawPixelatedMask(
           canvas, img, coloredPartImage, opacity, maskBlurAmount,
           flipHorizontal, pixelCellWidth);
-    }, 60)
-    }
+    }, 60);
+  }
 
+  function choiceFunction() {
+    document.getElementById('kampus').addEventListener('click', function() {
+      if (document.getElementById('kampuslista').style.display === 'inline-flex') {
+        document.getElementById('kampuslista').style.display = 'none';
+      } else if (document.getElementById('kampuslista').style.display === 'none') {
+        document.getElementById('kampuslista').style.display = 'inline-flex';
+      }
+      console.log("close");
+    });
+  }
+
+  function choiceKampus() {
+
+    for (let i = 1; i < 7; i++) {
+      document.getElementById('choice' + i).addEventListener('click', function(event) {
+        let innerHtml = event.target || event.srcElement;
+        document.getElementById('kampus').innerHTML = innerHtml.innerHTML;
+        document.getElementById('kampuslista').style.display = 'none';
+        console.log("closeCampus")
+      });
+    }
+  }
 
 
 </script>
@@ -130,3 +142,4 @@
 
 
 </html>
+
