--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h1 class="kampus" id="kampus">Kampus<span class="triangle"></span></h1>
     <div class="dropdown">
         <div class="list" id="kampuslista" style="display: none">
-            <h1 class="choice" id="152">Leiritie<span class="triangle"></span></h1>
-            <h1 class="choice" id="153">Hämeentie<span class="triangle"></span></h1>
-            <h1 class="choice" id="158">Myllypuro<span class="triangle"></span></h1>
-            <h1 class="choice" id="154">Vanha viertotie<span class="triangle"></span></h1>
+            <h1 class="choice 152" id="152">Leiritie<span class="triangle"></span></h1>
+            <h1 class="choice 153" id="153">Hämeentie<span class="triangle"></span></h1>
+            <h1 class="choice 158" id="158">Myllypuro<span class="triangle"></span></h1>
+            <h1 class="choice 154" id="154">Vanha viertotie<span class="triangle"></span></h1>
         </div>
     </div>
 
@@ -66,7 +66,6 @@
 
   const img = document.getElementById('video');
   const video = document.getElementById('video');
-
   async function loadAndPredict() {
 
     const net = await bodyPix.load({
@@ -76,14 +75,19 @@
       quantBytes: 4,
 
     });
+
+      setInterval(async () => {
+          document.getElementById('video').style.opacity = 0;
+      },60);
     setInterval(async () => {
       const partSegmentation = await net.segmentMultiPersonParts(img);
+
 
 
       const backgroundBlurAmount = 3;
       const edgeBlurAmount = 3;
       const flipHorizontal = false;
-      const faceBodyPartIdsToBlur = [0,1,2];
+      const faceBodyPartIdsToBlur = [];
       const canvas = document.getElementById('canvas');
 
       const displaySize = {width: video.width, height: video.height};
@@ -91,9 +95,9 @@
 
       canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
       bodyPix.blurBodyPart(
-          canvas, img, partSegmentation, faceBodyPartIdsToBlur,
+          canvas, img, partSegmentation, /*faceBodyPartIdsToBlur,*/
           backgroundBlurAmount, edgeBlurAmount, flipHorizontal);
-    }, 60);
+    }, 3500);
   }
 
   function choiceFunction() {
@@ -113,11 +117,29 @@
     kampusButtons.addEventListener('click', (event) => {
       let innerHtml = event.target || event.srcElement;
       document.getElementById('kampus').innerHTML = innerHtml.innerHTML;
-     // document.getElementById('video').innerHTML =
+
       document.getElementById('kampuslista').style.display = 'none';
 
     });
   }
+
+  document.getElementById('152').addEventListener('click', ()=>{
+      document.getElementById('video').src = 'img/testivideo4.mp4';
+      console.log('152');
+  })
+  document.getElementById('153').addEventListener('click', ()=>{
+      document.getElementById('video').src = 'img/testivideo2.mp4';
+      console.log('153');
+  })
+  document.getElementById('158').addEventListener('click', ()=>{
+      document.getElementById('video').src = 'img/testivideo3.mp4';
+      console.log('158');
+  })
+  document.getElementById('154').addEventListener('click', ()=>{
+      document.getElementById('video').src = 'img/testivideo.mp4';
+      console.log('154');
+  })
+
 
 
 </script>
