--- a/index.html
+++ b/index.html
@@ -64,40 +64,85 @@
 
   loadAndPredict();
 
-  const img = document.getElementById('video');
+ // const img = document.getElementById('video');
   const video = document.getElementById('video');
   async function loadAndPredict() {
 
+   /*
+----------------------------------------------------------------------------------
+|    LoadAndPredict function have two different function to use                  |
+|    Both require the const net = await bodyPix.load({}) marked below            |
+|    and the setInterval(async () => { },60);                                    |
+|--------------------------------------------------------------------------------|
+|                                                                                |
+|    Blurry :                                                                    |
+|    Blurs the people tensorFlow finds                                           |
+|--------------------------------------------------------------------------------|
+|                                                                                |
+|    Color :                                                                     |
+|    Color the people tensorFlow finds                                           |
+|--------------------------------------------------------------------------------|
+|    Main.js and app.js make the sodexo food JSON work                           |
+|--------------------------------------------------------------------------------|
+|          All the blurring and menu stuff are done here                         |
+|                                                                                |
+----------------------------------------------------------------------------------
     const net = await bodyPix.load({
       architecture: 'MobileNetV1',
       outputStride: 16,
       multiplier: 0.5,
       quantBytes: 4,
 
-    });
+    });*/
 
       setInterval(async () => {
-          document.getElementById('video').style.opacity = 0;
-      },60);
-    setInterval(async () => {
-      const partSegmentation = await net.segmentMultiPersonParts(img);
+        const displaySize = {width: video.width, height: video.height};
+        faceapi.matchDimensions(canvas, displaySize);
 
+        canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
+        document.getElementById('video').style.filter = 'blur(3px)';
+        document.getElementById('canvas').style.opacity = '80%';
+      },30);
+
+
+   /* setInterval(async () => {
+      /* BLURRY
+
+      const partSegmentation = await net.segmentMultiPersonParts(img);
 
 
       const backgroundBlurAmount = 3;
       const edgeBlurAmount = 3;
       const flipHorizontal = false;
-      const faceBodyPartIdsToBlur = [];
+      const faceBodyPartIdsToBlur = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24];
       const canvas = document.getElementById('canvas');
 
-      const displaySize = {width: video.width, height: video.height};
-      faceapi.matchDimensions(canvas, displaySize);
-
-      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
       bodyPix.blurBodyPart(
-          canvas, img, partSegmentation, /*faceBodyPartIdsToBlur,*/
+          canvas, img, partSegmentation, faceBodyPartIdsToBlur,
           backgroundBlurAmount, edgeBlurAmount, flipHorizontal);
-    }, 3500);
+
+       */
+
+      /* COLOR
+       const partSegmentation = await net.segmentMultiPersonParts(img);
+
+
+        const coloredPartImage = bodyPix.toColoredPartMask(partSegmentation);
+        const opacity = 0.7;
+        const flipHorizontal = false;
+        const maskBlurAmount = 0;
+        const canvas = document.getElementById('canvas');
+
+         bodyPix.drawMask(
+      canvas, img, coloredPartImage, opacity, maskBlurAmount,
+      flipHorizontal);
+        */
+
+
+
+
+
+  //  }, 30);
   }
 
   function choiceFunction() {
@@ -125,18 +170,22 @@
 
   document.getElementById('152').addEventListener('click', ()=>{
       document.getElementById('video').src = 'img/testivideo4.mp4';
+    document.getElementById('kampus').style.width = '8vw';
       console.log('152');
   })
   document.getElementById('153').addEventListener('click', ()=>{
       document.getElementById('video').src = 'img/testivideo2.mp4';
+    document.getElementById('kampus').style.width = '12vw';
       console.log('153');
   })
   document.getElementById('158').addEventListener('click', ()=>{
       document.getElementById('video').src = 'img/testivideo3.mp4';
+    document.getElementById('kampus').style.width = '8vw';
       console.log('158');
   })
   document.getElementById('154').addEventListener('click', ()=>{
       document.getElementById('video').src = 'img/testivideo.mp4';
+    document.getElementById('kampus').style.width = '22vw';
       console.log('154');
   })
 
