--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 
    /*
 ----------------------------------------------------------------------------------
+|    This site does not need anything istalled                                   |
+|    It requires links in <head> and the faceapi file in /models                 |
+|    Bodypix/faceAPI documentation are good and easy to use                      |
+|--------------------------------------------------------------------------------|
 |    LoadAndPredict function have two different function to use                  |
 |    Both require the const net = await bodyPix.load({}) marked below            |
 |    and the setInterval(async () => { },60);                                    |
