--- a/index.html
+++ b/index.html
@@ -68,11 +68,24 @@
   const video = document.getElementById('video');
   async function loadAndPredict() {
 
+    setInterval(async () => {
+      const displaySize = {width: video.width, height: video.height};
+      faceapi.matchDimensions(canvas, displaySize);
+
+      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
+      document.getElementById('video').style.filter = 'blur(3px)';
+      document.getElementById('canvas').style.opacity = '80%';
+    //  document.getElementById('video').style.opacity = '0';
+    },30);
+
    /*
 ----------------------------------------------------------------------------------
-|    This site does not need anything istalled                                   |
-|    It requires links in <head> and the faceapi file in /models                 |
-|    Bodypix/faceAPI documentation are good and easy to use                      |
+|    This site does not need anything installed                                  |
+|    It requires links in <head> and the faceAPI file in /models                 |
+|    BodyPix/faceAPI documentation are good and easy to use                      |
+|      and the SetInterval above should be commented out if you are going to use |
+|      BodyPix/faceAPI and take the commented video opacity out of comments      |
+|     so the SetInterval only hides the original video stream                    |
 |--------------------------------------------------------------------------------|
 |    LoadAndPredict function have two different function to use                  |
 |    Both require the const net = await bodyPix.load({}) marked below            |
@@ -86,11 +99,15 @@
 |    Color :                                                                     |
 |    Color the people tensorFlow finds                                           |
 |--------------------------------------------------------------------------------|
-|    Main.js and app.js make the sodexo food JSON work                           |
+|    Main.js and app.js make the Sodexo food JSON work                           |
 |--------------------------------------------------------------------------------|
 |          All the blurring and menu stuff are done here                         |
-|                                                                                |
+|              below the BodyPix/FaceAPI stuff                                   |
 ----------------------------------------------------------------------------------
+
+
+
+
     const net = await bodyPix.load({
       architecture: 'MobileNetV1',
       outputStride: 16,
@@ -99,14 +116,7 @@
 
     });*/
 
-      setInterval(async () => {
-        const displaySize = {width: video.width, height: video.height};
-        faceapi.matchDimensions(canvas, displaySize);
 
-        canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
-        document.getElementById('video').style.filter = 'blur(3px)';
-        document.getElementById('canvas').style.opacity = '80%';
-      },30);
 
 
    /* setInterval(async () => {
@@ -120,6 +130,11 @@
       const flipHorizontal = false;
       const faceBodyPartIdsToBlur = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24];
       const canvas = document.getElementById('canvas');
+
+      const displaySize = {width: video.width, height: video.height};
+      faceapi.matchDimensions(canvas, displaySize);
+
+      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
 
       bodyPix.blurBodyPart(
           canvas, img, partSegmentation, faceBodyPartIdsToBlur,
@@ -136,6 +151,11 @@
         const flipHorizontal = false;
         const maskBlurAmount = 0;
         const canvas = document.getElementById('canvas');
+
+         const displaySize = {width: video.width, height: video.height};
+      faceapi.matchDimensions(canvas, displaySize);
+
+      canvas.getContext('2d').clearRect(0, 0, canvas.width, canvas.height);
 
          bodyPix.drawMask(
       canvas, img, coloredPartImage, opacity, maskBlurAmount,
